src/test/deca/context/valid/new_call_inside_main.deca
/*
    Description : Test sur la possibilité d'utiliser l'opérateur new dans la classe main

    Résultat : OK
*/
class A{

}
{
    A b = new A();
}
